# blanksquare-monorepo

./: .dockerignore  Cargo.toml  NOTICE  README.md  package-lock.json  package.json
.github/actions/download-artifact-by-run-id/: action.yml
.github/actions/download-artifact-by-sha/: action.yml
.github/actions/get-artifact-id/: action.yml
.github/actions/get-workflow-run-id/: action.yml
.github/actions/setup-prover-server/: action.yml
.github/workflows/: _build-contracts.yml  _build-enclave-artifacts.yml  _build-wasm-packages.yml  _check-vars-and-secrets.yml  _measure-gas-and-contract-size.yml  _rust-crates-checks.yml  _ts-checks.yml  build-and-deploy-shielder-relayer.yml  build-and-push-ar-cli.yml  build-and-push-fee-estimator.yml  build-and-push-prover-server.yml  on-pull-request-commit.yml  on-push-main.yml  on-release.yml  test-download-artifact-by-run-id.yml  testnet-nightly-e2e.yml  yaml-lint.yml  yaml-validate.yml
crates/integration-tests/: Makefile
crates/macros/: Cargo.toml
crates/memo-scan/: Cargo.toml  README.md
crates/memo-scan/src/: main.rs  scan.rs  utils.rs
crates/powers-of-tau/: Makefile
crates/scheduler-common/: Cargo.toml  Makefile
crates/scheduler-common/src/: protocol.rs
crates/scheduler-server/: Cargo.toml
crates/scheduler-server/src/: command_line_args.rs  error.rs  main.rs
crates/scheduler-server/src/handlers/: health.rs  mod.rs  schedule_withdraw.rs  tee_public_key.rs
crates/scheduler-tee/: Cargo.toml  Makefile  build.rs
crates/scheduler-tee/src/: main.rs  server.rs
crates/shielder-circuits/: Cargo.toml  Makefile  README.md
crates/shielder-cli/src/: config.rs  main.rs
crates/shielder-relayer/: Cargo.toml  Makefile  example-env  test.sh
crates/shielder-relayer/docker/: Dockerfile.client
crates/shielder-relayer/src/: fee.rs  main.rs  quote.rs  token.rs
crates/shielder-relayer/src/config/: mod.rs  tests.rs
crates/shielder-relayer/src/price_feed/: fetching.rs  mod.rs
crates/shielder-scheduler-common/: Cargo.toml
crates/shielder-scheduler-common/src/: lib.rs  metrics.rs  protocol.rs  vsock.rs
crates/shielder-scheduler-server/: Cargo.toml  Dockerfile  Makefile  README.md
crates/shielder-scheduler-server/src/: command_line_args.rs  error.rs  main.rs  relayer_rpc_url.rs  scheduler_processor.rs
crates/shielder-scheduler-server/src/db/: mod.rs  schema.rs
crates/shielder-scheduler-server/src/handlers/: health.rs  mod.rs  schedule_withdraw.rs  tee_prepare_relay_calldata.rs  tee_public_key.rs
crates/shielder-scheduler-tee/: Cargo.toml  Dockerfile  Makefile
crates/shielder-scheduler-tee/src/: command_line_args.rs  kms.rs  main.rs  server.rs  withdraw.rs
crates/shielder-setup/: Makefile  lib.rs
scripts/: deploy-shielder.sh
tee/: Cargo.toml  Makefile  README.md
tee/crates/shielder-prover-common/: Cargo.toml
tee/crates/shielder-prover-common/src/: protocol.rs  vsock.rs
tee/crates/shielder-prover-server/: Cargo.toml
tee/crates/shielder-prover-server/src/: command_line_args.rs  error.rs  main.rs
tee/crates/shielder-prover-server/src/handlers/: generate_proof.rs  health.rs  metrics.rs  mod.rs  tee_public_key.rs
tee/crates/shielder-prover-tee/: Cargo.toml
tee/crates/shielder-prover-tee/src/: server.rs
tee/nix/: flake.nix
tee/terragrunt/: terraform.tfvars  terragrunt.hcl
tooling-e2e-tests/: full_scenario.sh  testnet_env.sh  ts_sdk_tests.sh  utils.sh
ts/: pnpm-lock.yaml
ts/shielder-sdk/: package.json
ts/shielder-sdk-crypto-mobile/: package.json
ts/shielder-sdk-crypto-wasm-light/: package.json
ts/shielder-sdk-crypto-wasm-light/src/: wasmClient.ts  wasmClientWorker.ts
ts/shielder-sdk-crypto-wasm-light/src/circuits/: teeClient.ts
ts/shielder-sdk-crypto-wasm-light/src/nitro-attestation/: certificate.ts  constants.ts  cose.ts  index.ts  pcr.ts  verify.ts
ts/shielder-sdk-tests/: package.json  playwright.base.config.mjs  playwright.multithreaded.config.mjs  playwright.singlethreaded.config.mjs
ts/shielder-sdk-tests/tests/: constants.ts  envConfig.ts  types.ts
ts/shielder-sdk-tests/tests/playwrightFixtures/: globalConfig.ts
ts/shielder-sdk-tests/tests/shielder/: multiuser.test.ts  singleuser.test.ts  storage.test.ts
ts/shielder-sdk-tests/web/: EntryPoint.tsx  cryptoClient.ts  envConfig.ts  vite-env.d.ts
ts/shielder-sdk-tests/web/fixtures/: shielderClient.ts
ts/shielder-sdk-tests/web/fixtures/shielderTest/: setup.ts  validate.ts
ts/shielder-sdk/__tests/: generate-coverage-report.js
ts/shielder-sdk/__tests/client/: client.test.ts
ts/shielder-sdk/src/: constants.ts  index.ts  referral.ts
ts/shielder-sdk/src/chain/: contract.ts  relayer.ts
ts/shielder-sdk/src/client/: client.ts  factories.ts
ts/shielder-sdk/src/state/: types.ts
ts/shielder-sdk/src/state/sync/: chainStateTransition.ts
