[workspace]
resolver = "2"

members = ["crates/*"]
exclude = ["tee"]

[workspace.package]
edition = "2021"
authors = ["Cardinal"]
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/blanksquare-monorepo"

[workspace.dependencies]
alloy-contract = { version = "0.9.1" }
alloy-network = { version = "0.9.1" }
alloy-primitives = { version = "0.8.15" }
alloy-provider = { version = "0.9.1" }
alloy-rpc-types = { version = "0.9.1" }
alloy-rpc-types-eth = { version = "0.9.1" }
alloy-signer = { version = "0.9.1" }
alloy-signer-local = { version = "0.9.1" }
alloy-sol-types = { version = "0.8.15" }
alloy-transport = { version = "0.9.1" }
alloy-json-rpc = { version = "0.9.1" }
anyhow = { version = "1.0.86", default-features = false }
askama = { version = "0.12.0", default-features = false }
assert2 = { version = "0.3.15" }
async-channel = { version = "2.3.1" }
aws-nitro-enclaves-nsm-api = { version = "0.4.0" }
axum = { version = "0.8.1" }
base64 = { version = "0.22.1" }
byteorder = { version = "1.4.3" }
chacha20poly1305 = { version = "0.10.1", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.8" }
criterion = { version = "0.5.1" }
darling = { version = "0.20.11" }
ecies-encryption-cli = { git = "https://github.com/Cardinal-Cryptography/ecies-encryption-lib", tag = "v0.2.0" }
# below dependency is also used in tee/Cargo.toml workspace
ecies-encryption-lib = { git = "https://github.com/Cardinal-Cryptography/ecies-encryption-lib", tag = "v0.2.0" }
futures = { version = "0.3.31" }
getrandom = { version = "0.2" }
halo2_poseidon = { git = "https://github.com/Cardinal-Cryptography/poseidon-gadget", rev = "ce317a6" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0", default-features = false }
halo2curves = { version = "0.6.0", default-features = false }
human_bytes = { version = "0.4.3", default-features = false }
hex = { version = "0.4.3" }
inquire = { version = "0.7.5" }
itertools = { version = "0.13.0" }
lazy_static = { version = "1.5.0" }
metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.17.2" }
num-bigint = { version = "0.4.3" }
once_cell = { version = "1.21.3" }
openssl = { version = "0.10.59" }
parameterized = { version = "2.0.0" }
parking_lot = { version = "0.12.3" }
proc-macro2 = { version = "1.0.95" }
quote = { version = "1.0.40" }

# rand 0.8.X is compatible with rand_core 0.6.X
rand = { version = "0.8.5" }
# rand_core must stay on the old version, as in 0.9.X the rand_core::RngCore and rand::RngCore
# are separate things, so code won't compile if rand_core dependency is bumped. Long term fix
# is to depend on rand::Rng
rand_core = { version = "0.6.4" }

rayon = { version = "1.10.0" }
reqwest = { version = "0.12.5" }
regex = { version = "1.11.1" }
revm = { version = "18.0.0", default-features = false }
revm-primitives = { version = "14.0.0", default-features = false }
rstest = { version = "0.23.0" }
ruint = { version = "1" }
rust-argon2 = { version = "2.1.0" }
rust_decimal = { version = "1.36.0" }
serde = { version = "1.0.203" }
serde_json = { version = "1.0.120" }
sha3 = { version = "0.10" }
shellexpand = { version = "3.1.0" }
static_assertions = { version = "1.1.0" }
strum = { version = "0.27.1" }
strum_macros = { version = "0.27.1" }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "runtime-tokio-native-tls",
] }
syn = { version = "2.0.100" }
testcontainers = { version = "0.19.0" }
thiserror = { version = "2.0.12" }
time = { version = "0.3.37" }
tokio = { version = "1.47.1" }
tower-http = { version = "0.6.6" }
tokio-task-pool = "0.1.5"
tokio-util = "0.7.16"
tokio-vsock = "0.7.1"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "chrono"] }
uniffi = { version = "0.28.3" }
utoipa = { version = "5.3.1" }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.0" }
vsock = "0.5.1"
wasm-bindgen = { version = "=0.2.93" }
wasm-bindgen-rayon = { version = "=1.2.1" }
zip = { version = "=2.3.0", default-features = false }                                                                     # https://github.com/juhaku/utoipa/issues/1350

# AR-CLI
rand_chacha = { version = "0.3.1" }
log = { version = "0.4.20" }
env_logger = { version = "0.10.0" }
rusqlite = { version = "0.32.0" }
tiny-bip39 = { version = "2.0.0" }

# Local dependencies
content-encryption = { path = "crates/content-encryption", default-features = false }
evm-utils = { path = "crates/evm-utils" }
halo2_solidity_verifier = { path = "crates/halo2-verifier" }
macros = { path = "crates/macros" }
powers-of-tau = { path = "crates/powers-of-tau" }
shielder-account = { path = "crates/shielder-account" }
shielder-contract = { path = "crates/shielder-contract" }
shielder-circuits = { path = "crates/shielder-circuits" }
shielder-relayer = { path = "crates/shielder-relayer" }
shielder-setup = { path = "crates/shielder-setup" }
type-conversions = { path = "crates/type-conversions" }
transcript = { path = "crates/transcript" }
shielder-scheduler-common = { path = "crates/shielder-scheduler-common" }

#[profile.release]
lto = "fat"

