[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Cardinal"]
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/blanksquare-monorepo"

[workspace.dependencies]
aws-nitro-enclaves-nsm-api = "0.4.0"
axum = "0.8.4"
base64 = "0.22.1"
clap = "4.5.38"
enum-map = "2.7.3"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.27"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
rand = { version = "0.8.5" }
serde = "1.0.219"
serde_json = "1.0.140"
shielder-prover-common = { path = "crates/shielder-prover-common" }
strum = "0.27.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
thiserror = "2.0.12"
tokio = "1.45.0"
tokio-task-pool = "0.1.5"
tokio-util = "0.7.15"
tokio-vsock = "0.7.1"
tower-http = { version = "0.6.1" }
vsock = "0.5.1"

ecies-encryption-lib = { git = "https://github.com/Cardinal-Cryptography/ecies-encryption-lib", tag = "v0.2.0" }

# below dependencies contains a rev which is also used in tee/nix/flake.nix, which is far from ideal since one needs to bump it there as well
shielder-circuits =  { git = "https://github.com/Cardinal-Cryptography/blanksquare-monorepo", rev = "fa55a8e23b5450bcce916290745f5c4635299a02" }
type-conversions = { git = "https://github.com/Cardinal-Cryptography/blanksquare-monorepo", rev = "fa55a8e23b5450bcce916290745f5c4635299a02" }
powers-of-tau = { git = "https://github.com/Cardinal-Cryptography/blanksquare-monorepo", rev = "fa55a8e23b5450bcce916290745f5c4635299a02" }
