[package]
name = "shielder-scheduler-common"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
enum-map = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shielder-setup = { workspace = true }
shielder-relayer = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tokio-vsock = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
