[package]
name = "shielder-scheduler-server"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
axum = { workspace = true, features = ["tokio", "macros"] }
clap = { workspace = true, features = ["derive", "env"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
shielder-scheduler-common = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread"] }
tokio-task-pool = { workspace = true, features = ["log"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vsock = { workspace = true }
