[package]
name = "shielder-scheduler-server"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-signer-local = { workspace = true }
axum = { workspace = true, features = ["tokio", "macros"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shielder-scheduler-common = { workspace = true }
shielder-setup = { workspace = true }
shielder-contract = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread"] }
tokio-task-pool = { workspace = true, features = ["log"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vsock = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "runtime-tokio-native-tls",
] }
